# distilgpt2-api

./: Dockerfile  LICENCE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/distilgpt2_api/: __main__.py  api.py  text_generation.py
